--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "type": "personal",
+        "type": "Personal",
         "title": "Calendar Todo",
         "description": "React를 복습하며 진행한 반응형 웹앱입니다   .\nDate 객체를 활용해 달력을 구현하고, Todo 항목에 날짜를 지정할 수 있도록 구성했습니다.",
         "blogLink": "https://hy-un.tistory.com/category/React/Calendar%20Todo",
@@ -9,7 +9,7 @@
         "image": ""
     },
     {
-        "type": "personal",
+        "type": "Personal",
         "title": "HyunTube",
         "description": "YouTube Data API를 사용하여 유튜브 사이트를 반응형 웹사이트로 개발하였습니다. \n React Query의 useInfiniteScroll을 활용해 무한 스크롤 기능을 구현했습니다.",
         "blogLink": "https://hy-un.tistory.com/category/React/Youtube",
@@ -18,7 +18,7 @@
         "image": ""
     },
     {
-        "type": "personal",
+        "type": "Personal",
         "title": "Weather Web",
         "description": "OpenWeatherMap API와 Geolocation Web API를 사용해 현재 위치 기반의 날씨 정보를 제공하는 반응형 웹사이트입니다. \n검색 기능을 통해 다른 지역의 날씨도 확인할 수 있습니다.",
         "blogLink": "https://hy-un.tistory.com/category/React/Weather",
