--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -26,7 +26,7 @@
         "blogLink": "https://hy-un.tistory.com/category/React/Weather",
         "skills": "React, TypeScript, CSS Modules, Axios, React Query, Recoil",
         "demoLink": "https://weather-kappa-gules.vercel.app/",
-        "githubLink": "",
+        "githubLink": "https://github.com/GangHyun95/weather",
         "image": "weather.png"
     },
     {
