--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,6 +1,16 @@
 [
     {
         "type": "Personal",
+        "title": "Pokemon",
+        "description": "Poke API를 사용하여 Next.js를 기반으로 개발한 포켓몬 웹사이트입니다. \nPrisma와 MongoDB를 활용해 좋아요 및 북마크 기능을 구현하였으며, Zustand를 사용해 사용자 정보와 좋아요/북마크 데이터를 전역으로 효율적으로 관리하였습니다.",
+        "blogLink": "https://hy-un.tistory.com/category/Next.js/Pokemon",
+        "skills": "Next.js, TypeScript, Zustand, Prisma, MongoDB",
+        "demoLink": "https://pokemon-mu-azure.vercel.app/",
+        "githubLink": "https://github.com/GangHyun95/pokemon-app",
+        "image": "pokemon.png"
+    },
+    {
+        "type": "Personal",
         "title": "Calendar Todo",
         "description": "React를 복습하며 진행한 반응형 웹앱입니다   .\nDate 객체를 활용해 달력을 구현하고, Todo 항목에 날짜를 지정할 수 있도록 구성했습니다.",
         "blogLink": "https://hy-un.tistory.com/category/React/Calendar%20Todo",
@@ -42,7 +52,7 @@
     {
         "type": "Team",
         "title": "저기요(배달주문 웹 사이트)",
-        "period" : "23.01.09 - 23.02.05",
+        "period": "23.01.09 - 23.02.05",
         "description": "백엔드와의 협업 프로젝트로, 백엔드에서 제공한 REST API를 활용해 요기요를 벤치마킹한 배달 주문 웹사이트를 개발했습니다. \n프론트엔드에서 장바구니, 상세 페이지, 리뷰 작성 및 삭제 기능을 구현했습니다.",
         "blogLink": "",
         "skills": "React, Redux Toolkit, Tailwind CSS",
